tests/paczka1/small_fuzzy/49397085.err
Error in line 1: OwmLMqBgk A%34 78,0
Error in line 9: UQsn A934 19,2
Error in line 4: A467 A818 12,4
Error in line 11: A467 A623 98,7
